# w1termos

./: Taskfile.yml  environment.yml  pyproject.toml  run  run.sh
src/w1termos/: __init__.py  __main__.py  app.py  config.py  models.py
src/w1termos/api/: __init__.py
src/w1termos/cli/: __init__.py
src/w1termos/core/: __init__.py
src/w1termos/sensor/: __init__.py
